Hacky workaround fix.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(VR_VERSION 2)
 set(AE_VERSION 1)
 
 # ---- Options ----
-option(BUILD_SKYRIMAE_640 "Build for 1.6.640 using an older version of Commonlib" TRUE)
+option(BUILD_SKYRIMAE_640 "Build for 1.6.640 using an older version of Commonlib" OFF)
 option(BUILD_SKYRIMVR "Build for Skyrim VR" OFF)
 option(BUILD_SKYRIMAE "Build for Skyrim AE" OFF)
 
@@ -51,11 +51,9 @@ set_from_environment(VCPKG_ROOT)
 if(BUILD_SKYRIMAE)
 	add_compile_definitions(SKYRIM_AE)
 	add_compile_definitions(SKYRIM_SUPPORT_AE)
-
+	set(CommonLibName "CommonLibSSE")
 	if(BUILD_SKYRIMAE_640)
 		set(CommonLibName "CommonLibSSEOld")
-	else() 
-		set(CommonLibName "CommonLibSSE")
 	endif()
 	set_from_environment(SkyrimAEPath)
 	set(SkyrimPath ${SkyrimAEPath})
@@ -81,6 +79,10 @@ find_commonlib_path()
 message(
 	STATUS
 	"Building ${NAME} ${VERSION} for ${SkyrimVersion} at ${SkyrimPath} with ${CommonLibName} at ${CommonLibPath}."
+)
+message(
+	STATUS
+	"Building 1.6.640: ${BUILD_SKYRIMAE_640}."
 )
 
 if(DEFINED VCPKG_ROOT)
