Fixed path for SE compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ elseif(BUILD_SKYRIMVR)
 	set(SkyrimVersion "Skyrim VR")
 	set(VERSION ${VERSION}.${VR_VERSION})
 else()
-	set(CommonLibName "CommonLibSSE")
+	set(CommonLibName "CommonLibSSEOld")
 	set_from_environment(Skyrim64Path)
 	set(SkyrimPath ${Skyrim64Path})
 	set(SkyrimVersion "Skyrim SSE")
