--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "extern/CommonLibSSELatest"]
+[submodule "extern/CommonLibSSE"]
 	path = extern/CommonLibSSE
 	url = https://github.com/powerof3/CommonLibSSE
 [submodule "extern/CommonLibVR"]
