--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ RainExtinguishesFires.code-workspace
 /build-1597/vcpkg_installed
 /build-1597
 /build-161170
+/build-15
+/build-16
+/build-16-old
+/build-vr
