--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "extern/CommonLibSSE"]
 	path = extern/CommonLibSSE
 	url = https://github.com/powerof3/CommonLibSSE
+[submodule "extern/CommonLibNG"]
+	path = extern/CommonLibNG
+	url = https://github.com/alandtse/CommonLibVR
+	branch = ng
